# Eval-AI-Agent

./: .gitignore  Makefile  README.md  mise.toml  requirements-dev.txt
beginner/B6-rust-log-analyzer/: Cargo.toml  README.md
beginner/B6-rust-log-analyzer/src/: analyzer.rs  errors.rs  lib.rs  main.rs
beginner/B6-rust-log-analyzer/tests/: log_analyzer_test.rs
docs/: AGENT_API.md  AGENT_PROMPTS.md  AGENT_USAGE.md  DASHBOARD_VISION.md  EXTERNAL_EVAL.md  GITHUB_PUSH.md  JIRA_TASK_MAP.md  ORCHESTRATOR.md  ORCHESTRATOR_DESIGN.md  PM4_JIRA_SUBTASK_PROMPTS.md  PML_VERIFICATION.md  README.md  SETUP.md  TASK_MAPPING.md  TASK_REGISTRY.md  orchestrator-config.example.json  task-registry.json
eval_blueprints/: A1_blueprint.md  A2_blueprint.md  A3_blueprint.md  A4_blueprint.md  A5_blueprint.md  A6_blueprint.md  B1_blueprint.md  B2_blueprint.md  B3_blueprint.md  B4_blueprint.md  B5_blueprint.md  B6_blueprint.md  D1_blueprint.md  D2_blueprint.md  D3_blueprint.md  D4_blueprint.md  D5_blueprint.md  D6_blueprint.md  I1_blueprint.md  I2_blueprint.md  I3_blueprint.md  I4_blueprint.md  I5_blueprint.md  I6_blueprint.md
frontend/: index.html
scripts/: b1-refresh-inventory.py  build_skills.py  ci-verify.sh  clone_jira_epic.py  docker-setup.sh  generate_jira_subtask_prompts.py  generate_task_notes_pdf.py  install-deps.sh  install-mise.sh  lint.sh  pminfra-story-fields.json  push-to-github.sh  push-with-token.sh
skills/: A1_parallel-plan.skill.md  A2_parallel-worktrees.skill.md  A3_polyglot-system.skill.md  A4_modernization.skill.md  A5_agent-review.skill.md  A6_performance.skill.md  (+18 more)
(+201 files in other folders)
